Fixes missing icon, notification alignment, page notification width

--- a/rocky/assets/css/components/notifications.scss
+++ b/rocky/assets/css/components/notifications.scss
@@ -51,7 +51,9 @@ span {
 p,
 span,
 section,
-div {
+div,
+form div,
+form section {
   &.error {
     &::before {
       content: "\eac5";
